--- a/workflow-templates/main.yml
+++ b/workflow-templates/main.yml
@@ -16,80 +16,20 @@ jobs:
       uses: actions/checkout@v2.3.2
     - name: Set up environment
       run: echo "Set up environment"
-    - name: Set up AWS command line interface
-      run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
-        aws --version
+    - name: Determine project version
+      id: version
+      uses: anttikivi/maintain-revision@v0.6.0
+      with:
+        type: json
+        file: package.json
     - name: Cache dependencies
       run: echo "Cache dependencies"
-    - id: read_package_json
-      name: Read package.json
-      run: |
-        package=`cat ./package.json`
-        echo "The JSON file's contents are:"
-        echo "$package"
-        package="${package//'%'/'%25'}"
-        package="${package//$'\n'/'%0A'}"
-        package="${package//$'\r'/'%0D'}"
-        echo "::set-output name=package_json::$package"
-    - id: read_package_version
-      name: Read version from package.json
-      run: |
-        package_version="${{ fromJSON(steps.read_package_json.outputs.package_json).version }}"
-        echo "The version got from the value JSON file is $package_version"
-        echo "::set-output name=package_version::$package_version"
-    - id: development_version
-      name: Determine development version
-      run: |
-        set +e
-        aws s3api head-object --bucket anthem-workflows --key $(echo "${{ github.repository }}" | tr - _)/${PACKAGE_VERSION}_version.txt
-        if [ $? -eq 0 ]; then
-          aws s3 cp s3://anthem-workflows/$(echo "${{ github.repository }}" | tr - _)/${PACKAGE_VERSION}_version.txt $LOCAL_VERSION_NUMBER_FILE
-        else
-          echo 0 > $LOCAL_VERSION_NUMBER_FILE
-        fi
-        set -e
-        dev_version=`cat $LOCAL_VERSION_NUMBER_FILE`
-        echo "The development version number is $dev_version"
-        rm $LOCAL_VERSION_NUMBER_FILE
-        expr $dev_version + 1 > $LOCAL_VERSION_NUMBER_FILE
-        dev_version=`cat $LOCAL_VERSION_NUMBER_FILE`
-        echo "The development version number for the current run is $dev_version"
-        echo "::set-output name=development_version::$dev_version"
-      env:
-        PACKAGE_VERSION: ${{ steps.read_package_version.outputs.package_version }}
-    - name: Upload development version
-      run: |
-        set +e
-        aws s3api head-object --bucket anthem-workflows --key $(echo "${{ github.repository }}" | tr - _)/${PACKAGE_VERSION}_version.txt
-        if [ $? -eq 0 ]; then
-          aws s3 rm s3://anthem-workflows/$(echo "${{ github.repository }}" | tr - _)/${PACKAGE_VERSION}_version.txt
-        fi
-        set -e
-        aws s3 cp $LOCAL_VERSION_NUMBER_FILE s3://anthem-workflows/$(echo "${{ github.repository }}" | tr - _)/${PACKAGE_VERSION}_version.txt
-      env:
-        PACKAGE_VERSION: ${{ steps.read_package_version.outputs.package_version }}
-    - id: version
-      name: Determine version
-      run: |
-        version="${PACKAGE_VERSION/-dev/-dev.$DEVELOPMENT_VERSION_NUMBER}"
-        echo "The version of the project is $version"
-        echo "::set-output name=version::$version"
-      env:
-        PACKAGE_VERSION: ${{ steps.read_package_version.outputs.package_version }}
-        DEVELOPMENT_VERSION_NUMBER: ${{ steps.development_version.outputs.development_version }}
-    - name: Set development version to package.json
-      run: sed -i "s/$PACKAGE_VERSION/${{ steps.version.outputs.version }}/g" package.json
-      env:
-        PACKAGE_VERSION: ${{ steps.read_package_version.outputs.package_version }}
     - name: Install dependencies
       run: echo "Install dependencies"
     - name: Compile
       run: echo "Compile"
     - name: Upload build artefacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v2.1.4
       with:
         name: project-name-${{ steps.version.outputs.version }}
         path: build/*.zip
